--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-paypal-button-v2": "^2.6.3",
+    "react-paystack": "^4.0.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar": "^2.0.1",
